# ec2-fs

./: .editorconfig  cdk-util.sh  pyproject.toml  ssh.sh  start.sh  status.sh  stop.sh  update.sh
ansible/: main.yml  playbook.yml  r-sasaki.yml  system.yml  user.yml
ansible/files/: go_env.sh
ansible/hosts/: ec2.ini
cdk/: cdk.context.json  cdk.json  package-lock.json  package.json  userdata.cfg
cdk/lib/: cdk-stack.js
