[tool.poetry]
name = "ec2-fs"
version = "0.1.0"
description = ""
authors = ["Yuusuke KOUNOIKE <yuusuke.kounoike@futurestandard.co.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
stacker = "^1.7.0"
ansible = "^2.9.5"
boto = "^2.49.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
